k8s/onprem/proxy.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: velocity-config
data:
  velocity.toml: |
    config-version = "2.7"
    bind = "0.0.0.0:25577"
    motd = "<#09add3>すしすきー Minecraft Server"
    show-max-players = 100
    online-mode = false
    force-key-authentication = false
    prevent-client-proxy-connections = false
    player-info-forwarding-mode = "modern"
    forwarding-secret-file = "forwarding.secret"
    announce-forge = false
    kick-existing-players = false
    ping-passthrough = "DISABLED"
    enable-player-address-logging = true

    [servers]
    lobby = "svc-lobby:25565"
    survival = "svc-survival:25565"
    industry = "svc-industry:25565"

    try = ["lobby"]

    [forced-hosts]

    [advanced]
    compression-threshold = 256
    compression-level = -1
    login-ratelimit = 3000
    connection-timeout = 5000
    read-timeout = 30000
    haproxy-protocol = false
    tcp-fast-open = false
    bungee-plugin-message-channel = true
    show-ping-requests = false
    failover-on-unexpected-server-disconnect = true
    announce-proxy-commands = true
    log-command-executions = false
    log-player-connections = true
    accepts-transfers = false

    [query]
    enabled = false
    port = 25577
    map = "Velocity"
    show-plugins = false
  forwarding.secret: "tak-pipeline-secret-123"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-velocity
spec:
  replicas: 1
  selector: { matchLabels: { app: velocity } }
  template:
    metadata:
      labels: { app: velocity }
    spec:
      containers:
        - name: velocity
          image: itzg/bungeecord
          env:
            - name: TYPE
              value: "VELOCITY"
            - name: MEMORY
              value: "512M"
          ports:
            - containerPort: 25577
              name: minecraft
          volumeMounts:
            - name: velocity-config
              mountPath: /config
          resources:
            requests: { memory: "512Mi", cpu: "200m" }
            limits: { memory: "768Mi", cpu: "1000m" }
      volumes:
        - name: velocity-config
          configMap:
            name: velocity-config
---
apiVersion: v1
kind: Service
metadata:
  name: svc-velocity
spec:
  selector: { app: velocity }
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: 25577
      protocol: TCP
      name: minecraft
